--- a/braces.html
+++ b/braces.html
@@ -239,7 +239,7 @@
                 <span class="services__box-subtitle">(керамические)</span>
               </h3>
               <div class="services__box-text">
-                Они подбираются под цвет Вашей эмали и полностью сливаются с Вашим зубом.
+                Они подбираются под цвет Вашей эмали и полностью сливаются с Вашим зубом. Благодаря этому, они практически незаметны для окружающих.
               </div>
             </div>
             <button class="btn-form services__info-btn" id="services-btn">
@@ -376,7 +376,7 @@
               </li>
               <li class="choice__list-item">
                 Все работы и видео-отзывы наших довольных клиентов Вы можете
-                посмотреть на наших социальных сетях                
+                посмотреть в наших социальных сетях                
               </li>
               <li class="choice__list-item">
                 Все клиники оснащены современным оборудованием мировых
