--- a/bracesUA.html
+++ b/bracesUA.html
@@ -237,7 +237,7 @@
                 <span class="services__box-subtitle">(керамічні)</span>
               </h3>
               <div class="services__box-text">
-                Вони підбираються під колір Вашої емалі і повністю зливаються з Вашим зубом.
+                Вони підбираються під колір Вашої емалі і повністю зливаються з Вашим зубом. Завдяки цьому, вони практично непомітні для оточуючих.
               </div>
             </div>
             <button class="btn-form services__info-btn" id="services-btn">
