--- a/implant.html
+++ b/implant.html
@@ -170,7 +170,7 @@
             </div>
             <div class="braces-services__info">
               <h3 class="braces-services__box-title">
-                Импланты Osstem (Корея)
+                Импланты Osstem <br> (Корея)
               </h3>
               <div class="services__box-text">
                 Лидер установок. 
@@ -196,7 +196,7 @@
               <img src="img/header-logo.png" alt="" class="services-logo" />
             </div>
             <div class="braces-services__info">
-              <h3 class="braces-services__box-title">Импланты IBT (Израиль)</h3>
+              <h3 class="braces-services__box-title">Импланты IBT <br> (Израиль)</h3>
               <div class="services__box-text">
                 Простая и быстрая установка импланта. Высокий коэффициент приживаемости 98,6%. Гарантия на установку от производителя. По доступной цене.
               </div>
@@ -219,7 +219,7 @@
               <img src="img/header-logo.png" alt="" class="services-logo" />
             </div>
             <div class="braces-services__info">
-              <h3 class="braces-services__box-title">Импланты Straumann (Швейцария)</h3>
+              <h3 class="braces-services__box-title">Импланты Straumann <br> (Швейцария)</h3>
               <div class="services__box-text">                
                 Швейцарское качество премиум класса. Приживаемость импланта 100% в отличие от других производителей. Процесс заживления происходит в 2 раза быстрее, чем при установке других конструкций.
               </div>
@@ -268,7 +268,7 @@
               </li>
               <li class="choice__list-item">
                 Все работы и видео-отзывы наших довольных клиентов Вы можете
-                посмотреть на наших социальных сетях                
+                посмотреть в наших социальных сетях                
               </li>
               <li class="choice__list-item">
                 Все клиники оснащены современным оборудованием мировых
