--- a/implantUA.html
+++ b/implantUA.html
@@ -168,7 +168,7 @@
             </div>
             <div class="braces-services__info">
               <h3 class="braces-services__box-title">
-                Імпланти Osstem (Корея)
+                Імпланти Osstem <br> (Корея)
               </h3>
               <div class="services__box-text">
                 Лідер установок. 
@@ -194,7 +194,7 @@
               <img src="img/header-logo.png" alt="" class="services-logo" />
             </div>
             <div class="braces-services__info">
-              <h3 class="braces-services__box-title">Імпланти IBT (Ізраїль)</h3>
+              <h3 class="braces-services__box-title">Імпланти IBT <br> (Ізраїль)</h3>
               <div class="services__box-text">
                 Проста і швидка установка імпланта. Високий коефіцієнт приживлюваності 98,6%. Гарантія на установку від виробника. За доступною ціною.
               </div>
@@ -217,7 +217,7 @@
               <img src="img/header-logo.png" alt="" class="services-logo" />
             </div>
             <div class="braces-services__info">
-              <h3 class="braces-services__box-title">Імпланти Straumann (Швейцарія)</h3>
+              <h3 class="braces-services__box-title">Імпланти Straumann <br> (Швейцарія)</h3>
               <div class="services__box-text">                
                 Швейцарська якість преміум класу. Приживлюваність імпланта 100% на відміну від інших виробників. Процес загоєння відбувається в 2 рази швидше, ніж при установці інших конструкцій.
               </div>
