--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               ></div>
               <h3 class="services__box-title">Терапевтическое лечения</h3>
               <div class="services__box-text">
-                С нашими стоматологами-терапевтами Вы получите качественное, профессиональное лечение по установки пломбы, лечению каналов, лечению десен и реставрации.
+                С нашими стоматологами-терапевтами Вы получите качественное, профессиональное лечение: установки пломбы, лечению каналов, лечению десен и реставрации.
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
@@ -235,7 +235,7 @@
               ></div>
               <h3 class="services__box-title">Отбеливание</h3>
               <div class="services__box-text">
-                Белоснежная улыбка всего за 1,5 часа. Гарантированный результат без вреда для Ваших зубов. Результат сохраняется до 2-х лет при соблюдению рекоммендаций врача.
+                Белоснежная улыбка всего за 1,5 часа. Гарантированный результат без вреда для Ваших зубов. Эффект сохраняется до 2-х лет при соблюдении рекоммендаций врача.
               </div>
             </div>
             <button class="services__info-btn" id="services-btn">
@@ -359,7 +359,7 @@
               ></div>
               <h3 class="services__box-title">Консультация</h3>
               <div class="services__box-text">
-                За 30 мин Вы получите консультацию нашего специалиста и качественно составленный план лечения, которые согласовывают главный врач и заведующий амбулатории.
+                За 30 минут Вы получите консультацию нашего специалиста и качественно составленный план лечения, который согласовывают главный врач и заведующий амбулатории.
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
@@ -409,7 +409,7 @@
               </li>
               <li class="choice__list-item">
                 Все работы и видео-отзывы наших довольных клиентов Вы можете
-                посмотреть на наших социальных сетях                
+                посмотреть в наших социальных сетях                
               </li>
               <li class="choice__list-item">
                 Все клиники оснащены современным оборудованием мировых
