--- a/mainUA.html
+++ b/mainUA.html
@@ -178,7 +178,7 @@
           <div class="services__box">
             <div
               class="services__box-images"
-              style="background-image: url(img/braces.jpg)"
+              style="background-image: url(img/braces.webp)"
             >
               <img src="img/header-logo.png" alt="" class="services-logo" />
             </div>
@@ -210,7 +210,7 @@
               ></div>
               <h3 class="services__box-title">Терапевтичне лікування</h3>
               <div class="services__box-text">
-                З нашими стоматологами-терапевтами Ви отримаєте якісне, професійне лікування по встановленню пломби, лікування каналів, лікування ясен і реставрації.
+                З нашими стоматологами-терапевтами Ви отримаєте якісне, професійне лікування: встановленню пломби, лікування каналів, лікування ясен і реставрації.
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
@@ -231,7 +231,7 @@
               ></div>
               <h3 class="services__box-title">Відбілювання</h3>
               <div class="services__box-text">
-                Білосніжна усмішка всього за 1,5 години. Результат зберігається до 2-х років. Гарантія від виробника.
+                Білосніжна усмішка всього за 1,5 години. Гарантований результат без шкоди для Ваших зубів. Ефект зберігається до 2-х років при дотриманні рекомендацій лікаря.
               </div>
             </div>
             <button class="services__info-btn" id="services-btn">
@@ -355,7 +355,7 @@
               ></div>
               <h3 class="services__box-title">Консультація</h3>
               <div class="services__box-text">
-                За 30 хв Ви отримаєте консультацію нашого фахівця і якісно складений план лікування, перевірений головним лікарем.
+                За 30 хвилин Ви отримаєте консультацію нашого фахівця і якісно складений план лікування, перевірений головним лікарем.
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
