--- a/whitening.html
+++ b/whitening.html
@@ -326,7 +326,7 @@
               </li>
               <li class="choice__list-item">
                 Все работы и видео-отзывы наших довольных клиентов Вы можете
-                посмотреть на наших социальных сетях                
+                посмотреть в наших социальных сетях                
               </li>
               <li class="choice__list-item">
                 Все клиники оснащены современным оборудованием мировых
