--- a/bracesUA.html
+++ b/bracesUA.html
@@ -259,8 +259,8 @@
                 <span class="services__box-subtitle">(самолігуючі)</span>
               </h3>
               <div class="services__box-text">
-                Унікальна система брекетів, дозволяє майже в два рази швидше виправляти зуби і рідко відвідувати стоматолога для корекції
-                раз в два місяці.
+                Унікальна брекет-система, завдяки якій ви можете вирівняти зуби в два рази швидше без необхідності відвідувати
+                стоматолога щомісяця.
               </div>
             </div>
             <button class="btn-form services__info-btn" id="services-btn">
@@ -504,7 +504,7 @@
             </iframe>
           </div>
         </div>
-        <h2 class="title reviews-title">Майстер Мед піклується про Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед піклується про Вас!</h2>
       </div>
     </section>
 
@@ -933,7 +933,7 @@
             <img src="img/footer-logo.png" alt="" class="footer__link-logo" />
           </a>
           <p class="confidentiality">Політика конфіденційності</p>
-          <p class="confidentiality">© 2021 "Майстер Мед". Всі права захищені</p>
+          <p class="confidentiality">© 2021 "Мастер Мед". Всі права захищені</p>
         </div>
       </div>
     </footer>
