--- a/implantUA.html
+++ b/implantUA.html
@@ -379,7 +379,7 @@
             ></iframe>
           </div>
         </div>
-        <h2 class="title reviews-title">Майстер Мед піклується про Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед піклується про Вас!</h2>
       </div>
     </section>
 
@@ -503,7 +503,7 @@
                 вул. Зубарєва, 39-А
               </div>
               <div class="geolocation-btn" data-location="9">
-                вул. Хар. Дивізій, 7
+                вул. Харківських Дивізій, 7
               </div>
             </div>
           </div>             
@@ -808,7 +808,7 @@
             <img src="img/footer-logo.png" alt="" class="footer__link-logo" />
           </a>
           <p class="confidentiality">Політика конфіденційності</p>
-          <p class="confidentiality">© 2021 "Майстер Мед". Всі права захищені</p>
+          <p class="confidentiality">© 2021 "Мастер Мед". Всі права захищені</p>
         </div>
       </div>
     </footer>
