--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               ></div>
               <h3 class="services__box-title">Терапевтическое лечения</h3>
               <div class="services__box-text">
-                С нашими стоматологами-терапевтами Вы получите качественное, профессиональное лечение: установки пломбы, лечению каналов, лечению десен и реставрации.
+                С нашими стоматологами-терапевтами Вы получите качественное, профессиональное лечение: установка пломбы, лечение каналов, лечение десен и реставрация.
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
@@ -235,7 +235,7 @@
               ></div>
               <h3 class="services__box-title">Отбеливание</h3>
               <div class="services__box-text">
-                Белоснежная улыбка всего за 1,5 часа. Гарантированный результат без вреда для Ваших зубов. Эффект сохраняется до 2-х лет при соблюдении рекоммендаций врача.
+                Белоснежная улыбка всего за 1,5 часа. Гарантированный результат без вреда для Ваших зубов. Эффект сохраняется до 2-х лет при соблюдении рекомендаций врача.
               </div>
             </div>
             <button class="services__info-btn" id="services-btn">
@@ -643,7 +643,7 @@
             ></iframe>
           </div>
         </div>
-        <h2 class="title reviews-title">Мастер Мед заботится о Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед заботится о Вас!</h2>
       </div>
     </section>
 
