--- a/mainUA.html
+++ b/mainUA.html
@@ -210,7 +210,7 @@
               ></div>
               <h3 class="services__box-title">Терапевтичне лікування</h3>
               <div class="services__box-text">
-                З нашими стоматологами-терапевтами Ви отримаєте якісне, професійне лікування: встановленню пломби, лікування каналів, лікування ясен і реставрації.
+                З нашими стоматологами-терапевтами Ви отримаєте якісне, професійне лікування: встановлення пломби, лікування каналів, лікування ясен і реставрація.
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
@@ -632,7 +632,7 @@
             ></iframe>
           </div>
         </div>
-        <h2 class="title reviews-title">Майстер Мед піклується про Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед піклується про Вас!</h2>
       </div>
     </section>
 
@@ -1061,7 +1061,7 @@
             <img src="img/footer-logo.png" alt="" class="footer__link-logo" />
           </a>
           <p class="confidentiality">Політика конфіденційності</p>
-          <p class="confidentiality">© 2021 "Майстер Мед". Всі права захищені</p>
+          <p class="confidentiality">© 2021 "Мастер Мед". Всі права захищені</p>
         </div>
       </div>
     </footer>
