--- a/prosthetics.html
+++ b/prosthetics.html
@@ -331,7 +331,7 @@
             ></iframe>
           </div>
         </div>
-        <h2 class="title reviews-title">Мастер Мед заботится о Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед заботится о Вас!</h2>
       </div>
     </section>
 
