--- a/prostheticsUA.html
+++ b/prostheticsUA.html
@@ -322,7 +322,7 @@
             ></iframe>
           </div>
         </div>
-        <h2 class="title reviews-title">Майстер Мед піклується про Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед піклується про Вас!</h2>
       </div>
     </section>
 
@@ -751,7 +751,7 @@
             <img src="img/footer-logo.png" alt="" class="footer__link-logo" />
           </a>
           <p class="confidentiality">Політика конфіденційності</p>
-          <p class="confidentiality">© 2021 "Майстер Мед". Всі права захищені</p>
+          <p class="confidentiality">© 2021 "Мастер Мед". Всі права захищені</p>
         </div>
       </div>
     </footer>
