--- a/whiteningUA.html
+++ b/whiteningUA.html
@@ -233,7 +233,7 @@
             <div class="whitening-services__info">
               <h3 class="services__box-title">               
                 Чистка зубів <br>
-                ультразвуковим апартом
+                ультразвуковим апаратом
               </h3>
               <div class="services__box-text">
                 Гарантовано усуває зубні камені, наліт від кави і чаю всього за
@@ -278,7 +278,7 @@
             <div class="whitening-services__info">
               <h3 class="services__box-title">Лікування пародонтозу</h3>
               <div class="services__box-text">
-                Безболісне, безкровне, безхірургічній лікування пародонтозу унікальним німецьким апаратом Vector. 
+                Безболісне, безкровне, безхірургічне лікування пародонтозу унікальним німецьким апаратом Vector. 
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
@@ -366,7 +366,7 @@
             </div>
           </div>   
           <div class="example__slider-box">
-            <div class="example-title">Результат Американського відбілювання<br> OPALESCENSE (США)</div>
+            <div class="example-title">Результат американського відбілювання<br> OPALESCENSE (США)</div>
             <div class="slider-box__img">
               <img
                 src="img/before2.jpg"
@@ -458,7 +458,7 @@
             </iframe>
           </div>          
         </div>
-        <h2 class="title reviews-title">Майстер Мед піклується про Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед піклується про Вас!</h2>
       </div>
     </section>
 
@@ -887,7 +887,7 @@
             <img src="img/footer-logo.png" alt="" class="footer__link-logo" />
           </a>
           <p class="confidentiality">Політика конфіденційності</p>
-          <p class="confidentiality">© 2021 "Майстер Мед". Всі права захищені</p>
+          <p class="confidentiality">© 2021 "Мастер Мед". Всі права захищені</p>
         </div>
       </div>
     </footer>
