--- a/braces.html
+++ b/braces.html
@@ -513,7 +513,7 @@
             </iframe>
           </div>
         </div>
-        <h2 class="title reviews-title">Мастер Мед заботится о Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед заботится о Вас!</h2>
       </div>
     </section>
 
