--- a/implant.html
+++ b/implant.html
@@ -388,7 +388,7 @@
             ></iframe>
           </div>
         </div>
-        <h2 class="title reviews-title">Мастер Мед заботится о Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед заботится о Вас!</h2>
       </div>
     </section>
 
