--- a/whitening.html
+++ b/whitening.html
@@ -463,7 +463,7 @@
             </iframe>
           </div>          
         </div>
-        <h2 class="title reviews-title">Мастер Мед заботится о Вас</h2>
+        <h2 class="title reviews-title">Мастер Мед заботится о Вас!</h2>
       </div>
     </section>
 
