--- a/braces.html
+++ b/braces.html
@@ -302,7 +302,7 @@
               <img src="img/header-logo.png" alt="" class="services-logo" />
             </div>
             <div class="braces-services__info">
-              <h3 class="braces-services__box-title">Невыдимые пластины <br>               
+              <h3 class="braces-services__box-title">Невидимые пластины <br>               
                 <span class="services__box-subtitle">(элайнеры)</span>
               </h3>
               <div class="services__box-text">
