--- a/bracesUA.html
+++ b/bracesUA.html
@@ -320,10 +320,10 @@
             </div>
             <div class="braces-services__info">
               <h3 class="braces-services__box-title">Пластини для вирівнювання <br>
-                зубов детям
+                зубів дітям
               </h3>
               <div class="services__box-text">
-                Наші дітки самі або з батьками вибирають будь-який дизайн, колір за бажанням. Знімні пластинки є ефективним видом
+                Наші дітки самі або з батьками обирають будь-який дизайн, колір за бажанням. Знімні пластинки є ефективним видом
                 лікування прикусу у дітей. Призначаються дітям до 12 років
               </div>
             </div>
