--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 class="services__box-icons"
                 style="background-image: url(img/icon/services.svg)"
               ></div>
-              <h3 class="services__box-title">Терапевтическое лечения</h3>
+              <h3 class="services__box-title">Терапевтическое лечение</h3>
               <div class="services__box-text">
                 С нашими стоматологами-терапевтами Вы получите качественное, профессиональное лечение: установка пломбы, лечение каналов, лечение десен и реставрация.
               </div>
