--- a/whitening.html
+++ b/whitening.html
@@ -215,7 +215,7 @@
                 <span class="services__box-subtitle">(Opalescense)</span>
               </h3>
               <div class="services__box-text">                
-                Белоснежные зубы как у американских звезд всего за 1,5 часа. Результат сохраняется до 2 лет. Осветление эмали до 4-х тонов. Гарантия от производителя.
+                Белоснежные зубы как у американских звезд всего за 1,5 часа. Результат сохраняется до 2-х лет. Осветление эмали до 4-х тонов. Гарантия от производителя.
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
