--- a/whiteningUA.html
+++ b/whiteningUA.html
@@ -213,7 +213,7 @@
                 <span class="services__box-subtitle">(Opalescense)</span>
               </h3>
               <div class="services__box-text">                
-                Білосніжні зуби як у американських зірок всього за 1,5 години. Результат зберігається до 2 років. Освітлення емалі до 4-х тонів. Гарантія від виробника.
+                Білосніжні зуби як у американських зірок всього за 1,5 години. Результат зберігається до 2-х років. Освітлення емалі до 4-х тонів. Гарантія від виробника.
               </div>
             </div>
             <button class="btn-form btn-form__green" id="services-btn" type="button">
