--- a/whitening.html
+++ b/whitening.html
@@ -235,7 +235,7 @@
             <div class="whitening-services__info">
               <h3 class="services__box-title">               
                 Чистка зубов <br>
-                ультразвуковым аппартом
+                ультразвуковым аппаратом
               </h3>
               <div class="services__box-text">
                 Гарантированно устраняет зубные камни, налет от кофе и чая всего за 
