--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
           <li class="services__list-item">
             имплантацией, и лечением зубов с помощью лазера</li>
           <li class="services__list-item">
-            предоставлением комплексного подхода в лечении дёсен с помощью аппарата Вектор: устраняет кровоточивость, лечит Ваши дёсны
+            предоставлением комплексного подхода в лечении дёсен с помощью аппарата Вектор: устраняет кровоточивость, лечит Ваши дёсна
           </li>
           <li class="services__list-item">
-            натуральными экстрактами, укрепляющие вашу эмаль
+            натуральными экстрактами, укрепляющими вашу эмаль
           </li>
         </ul>
         <button type="button" class="btn-form btn-form__red">
