--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             предоставлением комплексного подхода в лечении дёсен с помощью аппарата Вектор: устраняет кровоточивость, лечит Ваши дёсна
           </li>
           <li class="services__list-item">
-            натуральными экстрактами, укрепляющими вашу эмаль
+            натуральными экстрактами, укрепляющими Вашу эмаль
           </li>
         </ul>
         <button type="button" class="btn-form btn-form__red">
